infra/visibility/elk-cluster/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elastic-exporter
  labels:
    app: elastic-exporter
spec:
  selector:
    app: elastic-exporter
  ports:
    - protocol: TCP
      name: web
      port: 80
      targetPort: 9114
